# Ai-Personal-Learning-Assistant-AILA-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  check_db.py  check_dns.py  check_regions.py  docker-compose.yml  pyproject.toml  test_local_api.py  verify_local_db.py  verify_local_db_decoded.py  verify_local_db_final.py  verify_local_db_ipv4.py
.github/workflows/: main.yml
api/: index.py
app/: __init__.py
app/api/: router.py
app/core/: app.py  circuit_breaker.py  dependencies.py  error_utils.py  handlers.py  logging.py  metrics.py  rbac.py  redis.py
app/db/: session.py
app/middleware/: security.py
app/models/: explanation.py
app/prompts/: explain_v1.j2  flashcards_v1.j2  insight_v1.j2  summarize_v1.j2
app/repositories/: quiz_repository.py  topic_repository.py
app/schemas/: common.py  insight.py  learn.py  session.py
app/services/: health_service.py  insight_service.py  prompt_service.py  response_parser.py  session_service.py
app/tests/: test_concurrency.py  test_groq_direct.py  test_prompts.py
backend/: main.py  requirements.txt
docs/: API.md  Architecture.md  Deployment.md  README.md
frontend/: .env.local  frontend_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
project_docx/: AI_Instructions.docx  API.docx  Architecture.docx  Database.docx  Deployment.docx  Features.docx  PRD.docx  Security.docx  TechStack.docx  UIUX.docx
scripts/: bootstrap_backend.ps1  bootstrap_frontend.ps1  run_backend.ps1  run_frontend.ps1  test_prompts.py
(+162 files in other folders)
